[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "predicting-machine"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "A Machine that predicts the importance of facts."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["predicting-machine"]
dependencies = [
    "pyyaml == 6.0.3",
    "click == 8.3.1"
]

[project.scripts]
predicting-machine = "predicting_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/predicting-machine/predicting-machine"

[dependency-groups]
dev = ["pytest>=8.0.0"]